# arctos-portal

./: Cargo.toml  compose.yml  ingest.py  requirements.txt
src/: app.rs  errors.rs  lib.rs  main.rs  state.rs
src/routes/: attribute.rs  index.rs  mod.rs  search.rs
static/styles/: style.css
templates/: _base.html  attribute.html  index.html
templates/htmx/: search_results.html
